--- a/updatecli/updatecli.d/charts/acme.yaml
+++ b/updatecli/updatecli.d/charts/acme.yaml
@@ -25,10 +25,10 @@ targets:
     kind: file
     spec:
       files:
-      - clusters/prodpublick8s.yaml
-      - clusters/temp-privatek8s.yaml
-      matchPattern: 'chart: jenkins-infra\/acme((\r\n|\r|\n)(\s+))version: .*'
-      replacePattern: 'chart: jenkins-infra/acme${1}version: {{ source `lastChartVersion` }}'
+        - clusters/prodpublick8s.yaml
+        - clusters/temp-privatek8s.yaml
+      matchpattern: 'chart: jenkins-infra\/acme((\r\n|\r|\n)(\s+))version: .*'
+      replacepattern: 'chart: jenkins-infra/acme${1}version: {{ source "lastChartVersion" }}'
     scmid: default
 
 pullrequests:
