--- a/updatecli/updatecli.d/charts/codecentric-keycloak.yaml
+++ b/updatecli/updatecli.d/charts/codecentric-keycloak.yaml
@@ -26,8 +26,8 @@ targets:
     scmid: default
     spec:
       file: clusters/prodpublick8s.yaml
-      matchPattern: 'chart: codecentric\/keycloak((\r\n|\r|\n)(\s+))version: .*'
-      replacePattern: 'chart: codecentric/keycloak${1}version: {{ source `lastChartVersion` }}'
+      matchpattern: 'chart: codecentric\/keycloak((\r\n|\r|\n)(\s+))version: .*'
+      replacepattern: 'chart: codecentric/keycloak${1}version: {{ source "lastChartVersion" }}'
 
 pullrequests:
   default:
