--- a/updatecli/updatecli.d/charts/env-jenkins-release.yaml
+++ b/updatecli/updatecli.d/charts/env-jenkins-release.yaml
@@ -26,8 +26,8 @@ targets:
     scmid: default
     spec:
       file: clusters/prodpublick8s.yaml
-      matchPattern: 'chart: jenkins-infra\/env-jenkins-release((\r\n|\r|\n)(\s+))version: .*'
-      replacePattern: 'chart: jenkins-infra/env-jenkins-release${1}version: {{ source `lastChartVersion` }}'
+      matchpattern: 'chart: jenkins-infra\/env-jenkins-release((\r\n|\r|\n)(\s+))version: .*'
+      replacepattern: 'chart: jenkins-infra/env-jenkins-release${1}version: {{ source "lastChartVersion" }}'
 
 pullrequests:
   default:
