--- a/updatecli/updatecli.d/charts/falco.yaml
+++ b/updatecli/updatecli.d/charts/falco.yaml
@@ -26,8 +26,8 @@ targets:
     scmid: default
     spec:
       file: clusters/prodpublick8s.yaml
-      matchPattern: 'chart: falco\/falco((\r\n|\r|\n)(\s+))version: .*'
-      replacePattern: 'chart: falco/falco${1}version: {{ source `lastChartVersion` }}'
+      matchpattern: 'chart: falco\/falco((\r\n|\r|\n)(\s+))version: .*'
+      replacepattern: 'chart: falco/falco${1}version: {{ source "lastChartVersion" }}'
 
 pullrequests:
   default:
