--- a/updatecli/updatecli.d/charts/jenkins-wiki-exporter.yaml
+++ b/updatecli/updatecli.d/charts/jenkins-wiki-exporter.yaml
@@ -25,8 +25,8 @@ targets:
     kind: file
     spec:
       file: clusters/prodpublick8s.yaml
-      matchPattern: 'chart: jenkins-infra\/jenkins-wiki-exporter((\r\n|\r|\n)(\s+))version: .*'
-      replacePattern: 'chart: jenkins-infra/jenkins-wiki-exporter${1}version: {{ source `lastChartVersion` }}'
+      matchpattern: 'chart: jenkins-infra\/jenkins-wiki-exporter((\r\n|\r|\n)(\s+))version: .*'
+      replacepattern: 'chart: jenkins-infra/jenkins-wiki-exporter${1}version: {{ source "lastChartVersion" }}'
     scmid: default
 
 pullrequests:
