--- a/updatecli/updatecli.d/charts/nginx-ingress.yaml
+++ b/updatecli/updatecli.d/charts/nginx-ingress.yaml
@@ -26,10 +26,10 @@ targets:
     kind: file
     spec:
       files:
-      - clusters/prodpublick8s.yaml
-      - clusters/temp-privatek8s.yaml
-      matchPattern: 'chart: ingress-nginx\/ingress-nginx((\r\n|\r|\n)(\s+))version: .*'
-      replacePattern: 'chart: ingress-nginx/ingress-nginx${1}version: {{ source `lastChartVersion` }}'
+        - clusters/prodpublick8s.yaml
+        - clusters/temp-privatek8s.yaml
+      matchpattern: 'chart: ingress-nginx\/ingress-nginx((\r\n|\r|\n)(\s+))version: .*'
+      replacepattern: 'chart: ingress-nginx/ingress-nginx${1}version: {{ source "lastChartVersion" }}'
     scmid: default
 
 pullrequests:
