--- a/updatecli/updatecli.d/docker-images/keycloack-theme.yaml
+++ b/updatecli/updatecli.d/docker-images/keycloack-theme.yaml
@@ -38,8 +38,8 @@ targets:
     kind: file
     spec:
       file: config/ext_keycloak.yaml
-      matchPattern: 'image: jenkinsciinfra/keycloak-theme:.*'
-      replacePattern: 'image: jenkinsciinfra/keycloak-theme:{{ source `latestRelease` }}'
+      matchpattern: "image: jenkinsciinfra/keycloak-theme:.*"
+      replacepattern: 'image: jenkinsciinfra/keycloak-theme:{{ source "latestRelease" }}'
     scmid: default
 
 pullrequests:
