--- a/updatecli/updatecli.d/pod-templates/helmfile.yaml
+++ b/updatecli/updatecli.d/pod-templates/helmfile.yaml
@@ -26,7 +26,7 @@ conditions:
   checkDockerImage:
     name: Ensure that the image "jenkinsciinfra/helmfile:<found_version>" is published
     kind: dockerImage
-    sourceID: lastRelease
+    sourceid: lastRelease
     spec:
       image: "jenkinsciinfra/helmfile"
       ## tag come from the input source
