--- a/config/mirrorbits.yaml
+++ b/config/mirrorbits.yaml
@@ -21,7 +21,7 @@ ingress:
   className: public-nginx
   annotations:
     "cert-manager.io/cluster-issuer": "letsencrypt-prod"
-    "nginx.ingress.kubernetes.io/ssl-redirect": "false"
+    "nginx.ingress.kubernetes.io/ssl-redirect": "true"
   hosts:
     - host: get.jenkins.io
       paths:
