--- a/clusters/prodpublick8s.yaml
+++ b/clusters/prodpublick8s.yaml
@@ -257,5 +257,7 @@ releases:
     namespace: jenkinsisthewayio-redirector
     chart: jenkins-infra/httpredirector
     version: 0.2.0
+    needs:
+      - public-nginx-ingress/public-nginx-ingress # Required to expose both the UI and the webhooks endpoint
     values:
       - "../config/jenkinsisthewayio.yaml"
