--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -133,7 +133,7 @@ controller:
                     instanceCapStr: "5"
                     containers:
                       - name: jnlp
-                        image: "jenkins/inbound-agent:windowsservercore-1809"
+                        image: "jenkinsciinfra/inbound-agent:windowsservercore-1809"
                         command: "powershell"
                         args: "Start-Sleep 999999"
                         resourceLimitCpu: "500m"
