--- a/config/ext_jenkins-infra.yaml
+++ b/config/ext_jenkins-infra.yaml
@@ -143,6 +143,7 @@ controller:
                         alwaysPullImage: true
                         workingDir: "C:\\Users\\jenkins"
                     yamlMergeStrategy: "merge"
+                    label: "windows-2019-kubernetes"
                     yaml: |-
                       spec:
                         tolerations:
