--- a/clusters/temp-privatek8s.yaml
+++ b/clusters/temp-privatek8s.yaml
@@ -4,22 +4,17 @@ helmDefaults:
   timeout: 300
   wait: true
 repositories:
+  - name: datadog
+    url: https://helm.datadoghq.com
+  - name: ingress-nginx
+    url: https://kubernetes.github.io/ingress-nginx
   - name: jenkins
     url: https://charts.jenkins.io
   - name: jenkins-infra
     url: https://jenkins-infra.github.io/helm-charts
-  - name: ingress-nginx
-    url: https://kubernetes.github.io/ingress-nginx
   - name: jetstack
     url: https://charts.jetstack.io
 releases:
-  - name: cert-manager
-    namespace: cert-manager
-    chart: jetstack/cert-manager
-    version: v1.8.2
-    set:
-      - name: installCRDs
-        value: true
   - name: acme
     namespace: cert-manager
     chart: jenkins-infra/acme
@@ -30,18 +25,23 @@ releases:
       - "../config/acme.yaml"
     secrets:
       - "../secrets/config/acme/secrets.yaml"
-  - name: public-nginx-ingress
-    namespace: public-nginx-ingress
-    chart: ingress-nginx/ingress-nginx
-    version: 4.1.4
+  - name: cert-manager
+    namespace: cert-manager
+    chart: jetstack/cert-manager
+    version: v1.8.2
+    set:
+      - name: installCRDs
+        value: true
+  - name: datadog
+    namespace: datadog
+    chart: datadog/datadog
+    version: 2.36.4
+    timeout: 840 # Should be <= 14 min (because the job runs every 15 min)
     values:
-      - "../config/temp-privatek8s/ext_public-nginx-ingress.yaml"
-  - name: private-nginx-ingress
-    namespace: private-nginx-ingress
-    chart: ingress-nginx/ingress-nginx
-    version: 4.1.4
-    values:
-      - "../config/temp-privatek8s/ext_private-nginx-ingress.yaml"
+      - "../config/ext_datadog.yaml.gotmpl"
+      - "../config/ext_temp-privatek8s-datadog.yaml"
+    secrets:
+      - "../secrets/config/datadog/temp-privatek8s-secrets.yaml"
   - name: jenkins-infra
     namespace: jenkins-infra
     chart: jenkins/jenkins
@@ -55,15 +55,27 @@ releases:
       - "../config/ext_jenkins-infra.yaml"
     secrets:
       - "../secrets/config/infra.ci.jenkins.io/jenkins-secrets.yaml"
-  - name: jenkins-jobs
-    namespace: jenkins-infra
-    chart: jenkins-infra/jenkins-jobs
-    version: 0.4.0
-    values:
-      - "../config/ext_jenkins-infra-jobs.yaml"
   - name: jenkins-infra-additional
     namespace: jenkins-infra
     chart: jenkins-infra/jenkins-additional
     version: 0.0.3
     values:
       - ../config/jenkins-infra-additional.yaml
+  - name: jenkins-jobs
+    namespace: jenkins-infra
+    chart: jenkins-infra/jenkins-jobs
+    version: 0.4.0
+    values:
+      - "../config/ext_jenkins-infra-jobs.yaml"
+  - name: public-nginx-ingress
+    namespace: public-nginx-ingress
+    chart: ingress-nginx/ingress-nginx
+    version: 4.1.4
+    values:
+      - "../config/temp-privatek8s/ext_public-nginx-ingress.yaml"
+  - name: private-nginx-ingress
+    namespace: private-nginx-ingress
+    chart: ingress-nginx/ingress-nginx
+    version: 4.1.4
+    values:
+      - "../config/temp-privatek8s/ext_private-nginx-ingress.yaml"
